package entities.character;

public class Bomber extends Character{
    
}