package entities.character;

import graphics.Screen;


public abstract class Character{
    public abstract void render(Screen screen);
}