package entities.tile;


import graphics.Sprite;

/*
 * tường không thể phá hủy 
 */

public class Wall extends Tile {

	public Wall(int x, int y, Sprite sprite) {
		super(x, y, sprite);
	}

}
